add article to category
